# quantcheck

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
docs/: DEVELOPMENT.md  OPERATIONS.md  SES_DNS_HADAN_SITE.md
quantcheck/: __init__.py  admin_mail_tests.py  config.py  daily_admin_status.py  diff.py  email_templates.py  gmail_api_notify.py  health_watchdog.py  notify_dedupe.py  notify_routes.py  official_mail_forwarder.py  official_mail_replay.py  picks_check.py  picks_report.py  recipients.py  schedule.py  scheduler.py  scrape_parse.py  site_diff_notify.py  site_snapshot.py  state.py  validation.py
scripts/: install.sh  run-daemon.sh
systemd/: quantcheck.service
tests/: test_diff.py  test_fetch_resilience.py  test_notification_html.py  test_notify.py  test_official_mail_forwarder.py  test_page_auth_validation.py  test_recipients.py  test_schedule.py  test_scrape_parse.py  test_scrape_parse_validation.py  test_site_diff.py  test_state.py  test_validation.py
